# Web3

./: .gitignore  .tmp_encoding_test.txt  README.md  pyproject.toml
artifacts/: README.md
config/: llm_config.toml
config/prompt_profiles/: whale_eclipse_extreme.json
docs/: ARCHITECTURE_DESIGN_SPEC.md  PARAMETER_REFERENCE.md  agent_design.md  coding_structure.md
docs/design/: 实验设计.docx  搭建步骤.docx  智能体agent设计.docx  环境设计.docx
scripts/experiments/: collect_paper_results.py  exp1_eclipse.ps1  exp2_gov_dos.ps1  exp3_hijack.py  exp4_ablation.ps1  exp5_stress_scaling.ps1
scripts/experiments/split/: collect_split_results.py  exp1_eclipse_split.ps1  exp2_gov_dos_split.ps1  exp3_hijack_split.py  exp4_ablation_split.ps1  exp5_stress_scaling_split.ps1
scripts/reports/: ace_human_report.py
scripts/tools/: check_llm_api.py
scripts/visualization/: ace_conservation_visualizer.py  exp2_govdos_area_chart.py  paper_charts_generator.py  phase2_orchestrator_visualizer.py  phase3_topology_visualizer.py  phase5_governance_visualizer.py
src/ace_sim/: __init__.py
src/ace_sim/agents/: __init__.py  agent_profile.py  base_agent.py
src/ace_sim/cognition/: __init__.py  llm_brain.py  llm_router.py  memory_stream.py
src/ace_sim/config/: __init__.py  llm_config.py
src/ace_sim/engine/: __init__.py  (+1 more)
tests/: test_ace_engine.py  test_agent_profile_personas.py  test_llm_config.py  test_orchestrator.py  test_paper_charts_generator.py  test_phase3_agents.py  test_phase3_topology.py  test_phase4_agent_brain.py  test_phase5_governance.py  test_phase5_staircase_scenario.py
(+20 files in other folders)
