[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web3v2-ace-sim"
version = "0.1.0"
description = "ACE Engine and multi-agent Web3 simulation sandbox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "networkx>=3.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
llm = [
  "openai>=1.40.0",
]
memory = [
  "faiss-cpu>=1.8.0",
  "sentence-transformers>=2.7.0",
]
full = [
  "openai>=1.40.0",
  "faiss-cpu>=1.8.0",
  "sentence-transformers>=2.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
